[gd_scene load_steps=7 format=3 uid="uid://0patkwxygy7a"]

[ext_resource type="Script" path="res://scripts/train.gd" id="1_rd6qo"]
[ext_resource type="Texture2D" uid="uid://fidil5q2pk1b" path="res://sprites/Train.png" id="2_miii6"]
[ext_resource type="AudioStream" uid="uid://00s6gmfdcanh" path="res://audio/train-horn-jakarta-indonesia-940316-36328.mp3" id="3_wvjrh"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_70b2h"]
size = Vector2(19.7222, 12.1429)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dtxi6"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_q88ua"]

[node name="Train" type="StaticBody2D"]
collision_layer = 4
collision_mask = 0
script = ExtResource("1_rd6qo")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-130, -19)
texture = ExtResource("2_miii6")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-131.8, -4.75)
scale = Vector2(12.96, 0.7)
shape = SubResource("RectangleShape2D_70b2h")
debug_color = Color(0.784314, 0.356863, 0.635294, 0.419608)

[node name="Pickup Position" type="Area2D" parent="."]
position = Vector2(-130, -20)
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Pickup Position"]
position = Vector2(0, 16)
scale = Vector2(0.4, 0.4)
shape = SubResource("RectangleShape2D_dtxi6")

[node name="Exit Position" type="Area2D" parent="."]
position = Vector2(-256, -20)
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Exit Position"]
position = Vector2(0, 16)
scale = Vector2(0.4, 0.4)
shape = SubResource("RectangleShape2D_dtxi6")

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="Pickup Area" type="Area2D" parent="."]
position = Vector2(-130, -10)
scale = Vector2(33.44, 2.27407)
collision_layer = 0
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="Pickup Area"]
shape = SubResource("RectangleShape2D_q88ua")

[node name="door_one" type="Node2D" parent="."]
position = Vector2(-182, -11)

[node name="door_two" type="Node2D" parent="."]
position = Vector2(-78, -11)

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_wvjrh")
volume_db = -40.0
autoplay = true

[connection signal="area_shape_entered" from="Pickup Position" to="." method="_on_pickup_position_area_shape_entered"]
[connection signal="area_shape_entered" from="Exit Position" to="." method="_on_exit_position_area_shape_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="body_entered" from="Pickup Area" to="." method="_on_pickup_area_body_entered"]
